--- a/index.html
+++ b/index.html
@@ -2,14 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>code14</title>
-    <script src="libraries/p5.js" type="text/javascript"></script>
-
-    <script src="libraries/p5.dom.js" type="text/javascript"></script>
-    <script src="libraries/p5.sound.js" type="text/javascript"></script>
-
+    <title>digitrain</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
     <script src="sketch.js" type="text/javascript"></script>
-
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
   </head>
   <body>
